--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-markdown": "^1.2.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
