--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-autoprefixer": "^2.2.0",
     "gulp-concat": "^2.5.2",
     "gulp-extname": "^0.2.0",
+    "gulp-front-matter": "^1.3.0",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.10.0",
